--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
     "flowbite-react": "^0.10.1",
