--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.0.1",
     "react-quill": "^2.0.0",
     "react-stacked-center-carousel": "^1.0.14",
+    "sharp": "^0.33.5",
     "swiper": "^11.0.7",
     "typewriter-effect": "^2.21.0",
     "yup": "^1.4.0"
